force-app/main/default/objects/PredictorObject__c/PredictorObject__c.object-meta.xml
<CustomObject>
    <label>PredictorObject</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PredictorObject</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>