force-app/main/default/objects/PredictorObject__c/fields/actividades_economicas__c.field-meta.xml
<CustomField>
    <fullName>actividades_economicas__c</fullName>
    <label>Actividades Económicas</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Arte y recreación</fullName>
                <color>#FFFFFF</color>
                <label>Arte y recreación</label>
            </value>
            <value>
                <fullName>Comercio</fullName>
                <color>#FFFFFF</color>
                <label>Comercio</label>
            </value>
            <value>
                <fullName>Comunicación e información</fullName>
                <color>#FFFFFF</color>
                <label>Comunicación e información</label>
            </value>
            <value>
                <fullName>Construcción</fullName>
                <color>#FFFFFF</color>
                <label>Construcción</label>
            </value>
            <value>
                <fullName>Educación</fullName>
                <color>#FFFFFF</color>
                <label>Educación</label>
            </value>
            <value>
                <fullName>Empleo público</fullName>
                <color>#FFFFFF</color>
                <label>Empleo público</label>
            </value>
            <value>
                <fullName>Extractivismo</fullName>
                <color>#FFFFFF</color>
                <label>Extractivismo</label>
            </value>
            <value>
                <fullName>Finanzas y aseguradoras</fullName>
                <color>#FFFFFF</color>
                <label>Finanzas y aseguradoras</label>
            </value>
            <value>
                <fullName>Fuerzas de seguridad</fullName>
                <color>#FFFFFF</color>
                <label>Fuerzas de seguridad</label>
            </value>
            <value>
                <fullName>Gestión de desechos</fullName>
                <color>#FFFFFF</color>
                <label>Gestión de desechos</label>
            </value>
            <value>
                <fullName>Industrias manufactureras</fullName>
                <color>#FFFFFF</color>
                <label>Industrias manufactureras</label>
            </value>
            <value>
                <fullName>Inmobiliarias</fullName>
                <color>#FFFFFF</color>
                <label>Inmobiliarias</label>
            </value>
            <value>
                <fullName>Justicia</fullName>
                <color>#FFFFFF</color>
                <label>Justicia</label>
            </value>
            <value>
                <fullName>Reparaciones y oficios</fullName>
                <color>#FFFFFF</color>
                <label>Reparaciones y oficios</label>
            </value>
            <value>
                <fullName>Reparaciones y suministro de servicios básicos</fullName>
                <color>#FFFFFF</color>
                <label>Reparaciones y suministro de servicios básicos</label>
            </value>
            <value>
                <fullName>Rural</fullName>
                <color>#FFFFFF</color>
                <label>Rural</label>
            </value>
            <value>
                <fullName>Salud</fullName>
                <color>#FFFFFF</color>
                <label>Salud</label>
            </value>
            <value>
                <fullName>Servicios profesionales</fullName>
                <color>#FFFFFF</color>
                <label>Servicios profesionales</label>
            </value>
            <value>
                <fullName>Suministro de agua, gas y electricidad</fullName>
                <color>#FFFFFF</color>
                <label>Suministro de agua, gas y electricidad</label>
            </value>
            <value>
                <fullName>Transporte</fullName>
                <color>#FFFFFF</color>
                <label>Transporte</label>
            </value>
            <value>
                <fullName>Turismo, hotelería y gastronomía</fullName>
                <color>#FFFFFF</color>
                <label>Turismo, hotelería y gastronomía</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>