force-app/main/default/objects/PredictorObject__c/fields/Activity_1__c.field-meta.xml
<CustomField>
    <fullName>Activity_1__c</fullName>
    <label>Actividades #1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>