force-app/main/default/objects/PredictorObject__c/fields/Activity_2__c.field-meta.xml
<CustomField>
    <fullName>Activity_2__c</fullName>
    <label>Actividades #2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>