force-app/main/default/objects/PredictorObject__c/fields/Activity_3__c.field-meta.xml
<CustomField>
    <fullName>Activity_3__c</fullName>
    <label>Actividades #3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>