force-app/main/default/objects/PredictorObject__c/fields/ADFi_Profile_ID__c.field-meta.xml
<CustomField>
    <fullName>ADFi_Profile_ID__c</fullName>
    <externalId>true</externalId>
    <label>ADFi Profile ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>