force-app/main/default/objects/PredictorObject__c/fields/Administrative_Level_0__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Level_0__c</fullName>
    <label>AdminLevel 0 CitizenObj</label>
    <length>255</length>
    <type>Text</type>
</CustomField>