force-app/main/default/objects/PredictorObject__c/fields/Age_Group__c.field-meta.xml
<CustomField>
    <fullName>Age_Group__c</fullName>
    <label>Rango Etario</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>00 - 15</fullName>
                <color>#FFFFFF</color>
                <label>00 - 15</label>
            </value>
            <value>
                <fullName>16 - 17</fullName>
                <color>#FFFFFF</color>
                <label>16 - 17</label>
            </value>
            <value>
                <fullName>18 - 24</fullName>
                <color>#FFFFFF</color>
                <label>18 - 24</label>
            </value>
            <value>
                <fullName>25 - 39</fullName>
                <color>#FFFFFF</color>
                <label>25 - 39</label>
            </value>
            <value>
                <fullName>40 - 64</fullName>
                <color>#FFFFFF</color>
                <label>40 - 64</label>
            </value>
            <value>
                <fullName>65 +</fullName>
                <color>#FFFFFF</color>
                <label>65 +</label>
            </value>
            <value>
                <fullName>NA</fullName>
                <color>#FFFFFF</color>
                <default>true</default>
                <label>NA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>