force-app/main/default/objects/PredictorObject__c/fields/Alerta_Buenos_Aires_ID__c.field-meta.xml
<CustomField>
    <fullName>Alerta_Buenos_Aires_ID__c</fullName>
    <label>Alerta Buenos Aires ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>