force-app/main/default/objects/PredictorObject__c/fields/Alerta_Buenos_Aires_SirenaID__c.field-meta.xml
<CustomField>
    <fullName>Alerta_Buenos_Aires_SirenaID__c</fullName>
    <label>Alerta Buenos Aires SirenaID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>