force-app/main/default/objects/PredictorObject__c/fields/audience__c.field-meta.xml
<CustomField>
    <fullName>audience__c</fullName>
    <label>Audiencia</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BABY BOOMERS</fullName>
                <color>#FFFFFF</color>
                <label>BABY BOOMERS</label>
            </value>
            <value>
                <fullName>CENTENNIALS</fullName>
                <color>#FFFFFF</color>
                <label>CENTENNIALS</label>
            </value>
            <value>
                <fullName>COALICION CIVICA</fullName>
                <color>#FFFFFF</color>
                <label>COALICION CIVICA</label>
            </value>
            <value>
                <fullName>EQUIPO CAMBIEMOS</fullName>
                <color>#FFFFFF</color>
                <label>EQUIPO CAMBIEMOS</label>
            </value>
            <value>
                <fullName>EXTRANJERO</fullName>
                <color>#FFFFFF</color>
                <label>EXTRANJERO</label>
            </value>
            <value>
                <fullName>GENERACION SILENCIOSA</fullName>
                <color>#FFFFFF</color>
                <label>GENERACION SILENCIOSA</label>
            </value>
            <value>
                <fullName>GENERACION X</fullName>
                <color>#FFFFFF</color>
                <label>GENERACION X</label>
            </value>
            <value>
                <fullName>INFRACTOR CRONICO</fullName>
                <color>#FFFFFF</color>
                <label>INFRACTOR CRONICO</label>
            </value>
            <value>
                <fullName>IZQUIERDA</fullName>
                <color>#FFFFFF</color>
                <label>IZQUIERDA</label>
            </value>
            <value>
                <fullName>KIRCHNERISTA</fullName>
                <color>#FFFFFF</color>
                <label>KIRCHNERISTA</label>
            </value>
            <value>
                <fullName>MILENNIALS</fullName>
                <color>#FFFFFF</color>
                <label>MILENNIALS</label>
            </value>
            <value>
                <fullName>NO VOTA PASO</fullName>
                <color>#FFFFFF</color>
                <label>NO VOTA PASO</label>
            </value>
            <value>
                <fullName>PJ</fullName>
                <color>#FFFFFF</color>
                <label>PJ</label>
            </value>
            <value>
                <fullName>PRIMER VOTO</fullName>
                <color>#FFFFFF</color>
                <label>PRIMER VOTO</label>
            </value>
            <value>
                <fullName>PRO</fullName>
                <color>#FFFFFF</color>
                <label>PRO</label>
            </value>
            <value>
                <fullName>PROGRESISTA</fullName>
                <color>#FFFFFF</color>
                <label>PROGRESISTA</label>
            </value>
            <value>
                <fullName>RADICAL</fullName>
                <color>#FFFFFF</color>
                <label>RADICAL</label>
            </value>
            <value>
                <fullName>SOLO BALLOTAGE</fullName>
                <color>#FFFFFF</color>
                <label>SOLO BALLOTAGE</label>
            </value>
            <value>
                <fullName>VOLUNTARIO CAMBIEMOS</fullName>
                <color>#FFFFFF</color>
                <label>VOLUNTARIO CAMBIEMOS</label>
            </value>
            <value>
                <fullName>VOTANTE</fullName>
                <color>#FFFFFF</color>
                <label>VOTANTE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>