force-app/main/default/objects/PredictorObject__c/fields/Audiencia_Electoral__c.field-meta.xml
<CustomField>
    <fullName>Audiencia_Electoral__c</fullName>
    <label>Audiencia Electoral</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INFRACTOR CRONICO</fullName>
                <color>#FFFFFF</color>
                <label>INFRACTOR CRONICO</label>
            </value>
            <value>
                <fullName>NO VOTA PASO</fullName>
                <color>#FFFFFF</color>
                <label>NO VOTA PASO</label>
            </value>
            <value>
                <fullName>SOLO BALLOTAGE</fullName>
                <color>#FFFFFF</color>
                <label>SOLO BALLOTAGE</label>
            </value>
            <value>
                <fullName>EXTRANJERO</fullName>
                <color>#FFFFFF</color>
                <label>EXTRANJERO</label>
            </value>
            <value>
                <fullName>PRIMER VOTO</fullName>
                <color>#FFFFFF</color>
                <label>PRIMER VOTO</label>
            </value>
            <value>
                <fullName>VOTANTE</fullName>
                <color>#FFFFFF</color>
                <label>VOTANTE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>