force-app/main/default/objects/PredictorObject__c/fields/Audiencia_Generaciones__c.field-meta.xml
<CustomField>
    <fullName>Audiencia_Generaciones__c</fullName>
    <label>Audiencia Generaciones</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GENERACION SILENCIOSA</fullName>
                <color>#FFFFFF</color>
                <label>GENERACION SILENCIOSA</label>
            </value>
            <value>
                <fullName>BABY BOOMERS</fullName>
                <color>#FFFFFF</color>
                <label>BABY BOOMERS</label>
            </value>
            <value>
                <fullName>GENERACION X</fullName>
                <color>#FFFFFF</color>
                <label>GENERACION X</label>
            </value>
            <value>
                <fullName>MILENNIALS</fullName>
                <color>#FFFFFF</color>
                <label>MILENNIALS</label>
            </value>
            <value>
                <fullName>CENTENNIALS</fullName>
                <color>#FFFFFF</color>
                <label>CENTENNIALS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>