force-app/main/default/objects/PredictorObject__c/fields/Audiencia_Laboratorio__c.field-meta.xml
<CustomField>
    <fullName>Audiencia_Laboratorio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audiencia Laboratorio</label>
    <type>Checkbox</type>
</CustomField>