force-app/main/default/objects/PredictorObject__c/fields/Audiencia_Politica__c.field-meta.xml
<CustomField>
    <fullName>Audiencia_Politica__c</fullName>
    <label>Audiencia Politica</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nucleo K</fullName>
                <color>#FFFFFF</color>
                <label>Nucleo K</label>
            </value>
            <value>
                <fullName>KIRCHNERISTA</fullName>
                <color>#FFFFFF</color>
                <label>KIRCHNERISTA</label>
            </value>
            <value>
                <fullName>PJ</fullName>
                <color>#FFFFFF</color>
                <label>PJ</label>
            </value>
            <value>
                <fullName>PRO</fullName>
                <color>#FFFFFF</color>
                <label>PRO</label>
            </value>
            <value>
                <fullName>COALICION CIVICA</fullName>
                <color>#FFFFFF</color>
                <label>COALICION CIVICA</label>
            </value>
            <value>
                <fullName>RADICAL</fullName>
                <color>#FFFFFF</color>
                <label>RADICAL</label>
            </value>
            <value>
                <fullName>PROGRESISTA</fullName>
                <color>#FFFFFF</color>
                <label>PROGRESISTA</label>
            </value>
            <value>
                <fullName>IZQUIERDA</fullName>
                <color>#FFFFFF</color>
                <label>IZQUIERDA</label>
            </value>
            <value>
                <fullName>VOLUNTARIO CAMBIEMOS</fullName>
                <color>#FFFFFF</color>
                <label>VOLUNTARIO CAMBIEMOS</label>
            </value>
            <value>
                <fullName>EQUIPO CAMBIEMOS</fullName>
                <color>#FFFFFF</color>
                <label>EQUIPO CAMBIEMOS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>