force-app/main/default/objects/PredictorObject__c/fields/beneficiario_planes_cba__c.field-meta.xml
<CustomField>
    <fullName>beneficiario_planes_cba__c</fullName>
    <label>beneficiario planes cba</label>
    <length>255</length>
    <type>Text</type>
</CustomField>