force-app/main/default/objects/PredictorObject__c/fields/Beneficios_Sociales__c.field-meta.xml
<CustomField>
    <fullName>Beneficios_Sociales__c</fullName>
    <label>Beneficios Sociales</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AUH</fullName>
                <color>#FFFFFF</color>
                <label>AUH</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>