force-app/main/default/objects/PredictorObject__c/fields/Beneficios_Sociales_CBA__c.field-meta.xml
<CustomField>
    <fullName>Beneficios_Sociales_CBA__c</fullName>
    <label>Beneficios Sociales CBA</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boleto Jubilados CBA</fullName>
                <color>#FFFFFF</color>
                <label>Boleto Jubilados CBA</label>
            </value>
            <value>
                <fullName>Beneficiario PAICOR</fullName>
                <color>#FFFFFF</color>
                <label>Beneficiario PAICOR</label>
            </value>
            <value>
                <fullName>Boleto Estudiantil CBA</fullName>
                <color>#FFFFFF</color>
                <label>Boleto Estudiantil CBA</label>
            </value>
            <value>
                <fullName>Plan CUNA</fullName>
                <color>#FFFFFF</color>
                <label>Plan CUNA</label>
            </value>
            <value>
                <fullName>Beneficiarios Tarjeta Social CBA</fullName>
                <color>#FFFFFF</color>
                <label>Beneficiarios Tarjeta Social CBA</label>
            </value>
            <value>
                <fullName>Beneficiarios Mas Leche</fullName>
                <color>#FFFFFF</color>
                <label>Beneficiarios Mas Leche</label>
            </value>
            <value>
                <fullName>Boleto Obrero CBA</fullName>
                <color>#FFFFFF</color>
                <label>Boleto Obrero CBA</label>
            </value>
            <value>
                <fullName>Beneficiarios Primer Paso</fullName>
                <color>#FFFFFF</color>
                <label>Beneficiarios Primer Paso</label>
            </value>
            <value>
                <fullName>Beneficiarios Vida Digna</fullName>
                <color>#FFFFFF</color>
                <label>Beneficiarios Vida Digna</label>
            </value>
            <value>
                <fullName>Beneficiarios Beca Deportiva CBA</fullName>
                <color>#FFFFFF</color>
                <label>Beneficiarios Beca Deportiva CBA</label>
            </value>
            <value>
                <fullName>Beneficiaros Banco de la Gente</fullName>
                <color>#FFFFFF</color>
                <label>Beneficiaros Banco de la Gente</label>
            </value>
            <value>
                <fullName>Beneficiarios PLAN FINES</fullName>
                <color>#FFFFFF</color>
                <label>Beneficiarios PLAN FINES</label>
            </value>
            <value>
                <fullName>Beneficiarios LO TENGO</fullName>
                <color>#FFFFFF</color>
                <label>Beneficiarios LO TENGO</label>
            </value>
            <value>
                <fullName>Plan Hogar Clase Media</fullName>
                <color>#FFFFFF</color>
                <label>Plan Hogar Clase Media</label>
            </value>
            <value>
                <fullName>Plan Hogar Clase Media Mix</fullName>
                <color>#FFFFFF</color>
                <label>Plan Hogar Clase Media Mix</label>
            </value>
            <value>
                <fullName>Plan Provincial Agroforestal</fullName>
                <color>#FFFFFF</color>
                <label>Plan Provincial Agroforestal</label>
            </value>
            <value>
                <fullName>Tarifa Social</fullName>
                <color>#FFFFFF</color>
                <label>Tarifa Social</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>