force-app/main/default/objects/PredictorObject__c/fields/Cambiemos_TDF__c.field-meta.xml
<CustomField>
    <fullName>Cambiemos_TDF__c</fullName>
    <label>Cambiemos_TDF</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>