force-app/main/default/objects/PredictorObject__c/fields/CDP_Axis__c.field-meta.xml
<CustomField>
    <fullName>CDP_Axis__c</fullName>
    <label>EPG Axis</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TestAxis</fullName>
                <color>#FFFFFF</color>
                <label>TestAxis</label>
            </value>
            <value>
                <fullName>NONE</fullName>
                <color>#FFFFFF</color>
                <label>NONE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>