force-app/main/default/objects/PredictorObject__c/fields/CDP_Campaign__c.field-meta.xml
<CustomField>
    <fullName>CDP_Campaign__c</fullName>
    <label>EPG Campaign</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TestCampaign</fullName>
                <color>#FFFFFF</color>
                <label>TestCampaign</label>
            </value>
            <value>
                <fullName>NONE</fullName>
                <color>#FFFFFF</color>
                <label>NONE</label>
            </value>
            <value>
                <fullName>Change_Eguillor</fullName>
                <color>#FFFFFF</color>
                <label>Change_Eguillor</label>
            </value>
            <value>
                <fullName>Facebook_Post</fullName>
                <color>#FFFFFF</color>
                <label>Facebook_Post</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>