force-app/main/default/objects/PredictorObject__c/fields/CDP_Status__c.field-meta.xml
<CustomField>
    <fullName>CDP_Status__c</fullName>
    <label>EPG Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Voluntario</fullName>
                <color>#FFFFFF</color>
                <label>Voluntario</label>
            </value>
            <value>
                <fullName>NINGUNO</fullName>
                <color>#FFFFFF</color>
                <label>NINGUNO</label>
            </value>
            <value>
                <fullName>Potenciales</fullName>
                <color>#FFFFFF</color>
                <label>Potenciales</label>
            </value>
            <value>
                <fullName>Activistas</fullName>
                <color>#FFFFFF</color>
                <label>Activistas</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>