force-app/main/default/objects/PredictorObject__c/fields/civil_status__c.field-meta.xml
<CustomField>
    <fullName>civil_status__c</fullName>
    <label>Estado Civil</label>
    <type>TextArea</type>
</CustomField>