force-app/main/default/objects/PredictorObject__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <label>Comunidad</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Director</fullName>
                <color>#FFFFFF</color>
                <label>Director</label>
            </value>
            <value>
                <fullName>Futbolista</fullName>
                <color>#FFFFFF</color>
                <label>Futbolista</label>
            </value>
            <value>
                <fullName>Mascoteros</fullName>
                <color>#FFFFFF</color>
                <default>true</default>
                <label>Mascoteros</label>
            </value>
            <value>
                <fullName>Futboleros</fullName>
                <color>#FFFFFF</color>
                <label>Futboleros</label>
            </value>
            <value>
                <fullName>Lector</fullName>
                <color>#FFFFFF</color>
                <label>Lector</label>
            </value>
            <value>
                <fullName>Pintor</fullName>
                <color>#FFFFFF</color>
                <label>Pintor</label>
            </value>
            <value>
                <fullName>Tenista</fullName>
                <color>#FFFFFF</color>
                <label>Tenista</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>