force-app/main/default/objects/PredictorObject__c/fields/condicion_de_ingreso__c.field-meta.xml
<CustomField>
    <fullName>condicion_de_ingreso__c</fullName>
    <label>Condición de Ingreso</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asalariado</fullName>
                <color>#FFFFFF</color>
                <label>Asalariado</label>
            </value>
            <value>
                <fullName>Auxiliares - Cooperativas y precaria</fullName>
                <color>#FFFFFF</color>
                <label>Auxiliares - Cooperativas y precaria</label>
            </value>
            <value>
                <fullName>Auxiliares - Jubilados y pensionados</fullName>
                <color>#FFFFFF</color>
                <label>Auxiliares - Jubilados y pensionados</label>
            </value>
            <value>
                <fullName>Cuenta propia</fullName>
                <color>#FFFFFF</color>
                <label>Cuenta propia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>