force-app/main/default/objects/PredictorObject__c/fields/Condicion_Laboral__c.field-meta.xml
<CustomField>
    <fullName>Condicion_Laboral__c</fullName>
    <label>Condicion Laboral</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Empleado</fullName>
                <color>#FFFFFF</color>
                <label>Empleado</label>
            </value>
            <value>
                <fullName>Jubilado</fullName>
                <color>#FFFFFF</color>
                <label>Jubilado</label>
            </value>
            <value>
                <fullName>Monotributista</fullName>
                <color>#FFFFFF</color>
                <label>Monotributista</label>
            </value>
            <value>
                <fullName>Autónomo</fullName>
                <color>#FFFFFF</color>
                <label>Autónomo</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>