force-app/main/default/objects/PredictorObject__c/fields/CUIT_Empleador_2__c.field-meta.xml
<CustomField>
    <fullName>CUIT_Empleador_2__c</fullName>
    <label>CUIT #2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>